2010-04-08  Ankit Jain  <jankit@novell.com>

	* Vbc.cs (ValidateParameters): Always return true, dummy implementation.

2010-04-07  Ankit Jain  <jankit@novell.com>

	* MSBuild.cs: Emit global properties, if any. Sort the property
	list.

2010-04-03  Ankit Jain  <jankit@novell.com>

	* Csc.cs: Use dmcs as the compiler for 4.0 profile.
	* MSBuild.cs (ToolsVersion): New.
	Use toolsVersion for building.

2010-02-10  Ankit Jain  <jankit@novell.com>

	* GenerateResource.cs (CompileResourceFile): Check File.Exists
	for source file.
	Don't build if the target is newer than the source file.
	(Execute): Continue building all the resources, even if there
	are failures for some files.

2010-02-10  Ankit Jain  <jankit@novell.com>

	Fix bug #558739.
	* GenerateResource (Resgen): New. Internal task to run resgen
	with MONO_IOMAP=drive .
	(Execute): Use the new Resgen task to compile the resources.

2010-02-06  Ankit Jain  <jankit@novell.com>

	* LC.cs: New.

2010-02-05  Ankit Jain  <jankit@novell.com>

	Fix bug #576579.
	* CreateManifestResourceName.cs: Use TargetPath metadata, as the link
	name.
	* CreateCSharpManifestResourceName.cs:
	* CreateVisualBasicManifestResourceName.cs: Prefer linkname over
	filename, if available.

2010-02-04  Ankit Jain  <jankit@novell.com>

	* WriteLinesToFile.cs: Delete the file if there is nothing to
	be written and overwrite==true.

2010-02-02	Rodrigo B. de Oliveira	<rodrigo@unity3d.com>

	* AssemblyResolver.cs:
		guard against non existing framework directory
		(for scenarios where lib/mono/3.5 is not available).

2009-12-22  Ankit Jain  <jankit@novell.com>

	Fix bug #565849.
	* CreateItem.cs: Use DirectoryScanner to handle wildcards.
	(IsExcluded): Remove.

2009-11-26  Ankit Jain  <jankit@novell.com>

	* ManagedCompiler.cs (AddResponseFileCommands): *mcs doesn't
	support /debug:pdbonly, so map it to /debug:full .

2009-11-10  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (ToolExe): New.
	* Csc.cs: