@@ -1,5 +1,11 @@
 2010-04-08  Ankit Jain  <jankit@novell.com>
 
+	Fix bug #594541
+	* Vbc.cs (LogEventsFromTextOutput): Override and correctly parse
+	output. Taken regex from monodevelop for this.
+
+2010-04-08  Ankit Jain  <jankit@novell.com>
+
 	* Vbc.cs (ValidateParameters): Always return true, dummy implementation.
 
 2010-04-07  Ankit Jain  <jankit@novell.com>
